tests/miniJava/neg/005019_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , int [] public int [] java ( ) { return 0 ; } java ) { return 0 ; } }
